# plusblocks

./: CMakeLists.txt
lib/: CMakeLists.txt  LibBlock.cpp  LibBlock.h
meta/: update-qtcreator.sh
src/: config.def.h  config.h  main.cpp
